--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,8 +10,6 @@
     "default_icon": "icon128.png",
     "default_popup": "index.html"
   },
-  "permissions": ["activeTab"],
-  "background": {
-    "service_worker": "background.js"
-  }
+  "permissions": ["activeTab"]
+  
 }
